--- a/xinshuwu/app/src/main/res/layout/recommend_item.xml
+++ b/xinshuwu/app/src/main/res/layout/recommend_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="120dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:paddingLeft="6dp"
             android:orientation="vertical">
 
@@ -26,28 +27,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingRight="10dp"
+                android:gravity="left|top"
                 android:textColor="@color/ash2"
-                android:textSize="14sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/book_type_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
-                android:lines="3"
+                android:lines="5"
                 android:paddingRight="10dp"
                 android:textColor="@color/ash6"
-                android:textSize="12sp" />
+                android:textSize="11sp" />
 
             <TextView
                 android:id="@+id/book_author"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="2"
+                android:gravity="left|bottom"
                 android:paddingRight="10dp"
                 android:textColor="@color/ash2"
-                android:textSize="12sp" />
+                android:textSize="11sp" />
 
         </LinearLayout>
     </LinearLayout>
