--- a/xinshuwu/app/src/main/res/values/colors.xml
+++ b/xinshuwu/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="ash2">#222222</color>
     <color name="ash6">#666666</color>
     <color name="grey_line">#b4b4b4</color>
+    <color name="refresh_default_color">#f15353</color>
 </resources>
