--- a/xinshuwu/app/src/main/res/layout/recommend_horizontal_item.xml
+++ b/xinshuwu/app/src/main/res/layout/recommend_horizontal_item.xml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp"
-    android:layout_height="160dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginBottom="12dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/book_image"
             android:layout_width="wrap_content"
-            android:layout_height="130dp" />
+            android:layout_height="98dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/book_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
                 android:ellipsize="end"
                 android:gravity="center"
+                android:visibility="gone"
+                android:lines="2"
                 android:textColor="@color/ash2"
-                android:textSize="14sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/book_type_desc"
@@ -37,20 +45,20 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:lines="3"
-                android:visibility="gone"
                 android:paddingRight="10dp"
                 android:textColor="@color/ash6"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/book_author"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="2"
-                android:visibility="gone"
                 android:paddingRight="10dp"
                 android:textColor="@color/ash2"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone" />
 
         </LinearLayout>
     </LinearLayout>
