--- a/xinshuwu/app/src/main/res/layout/recommends_item.xml
+++ b/xinshuwu/app/src/main/res/layout/recommends_item.xml
@@ -26,13 +26,15 @@
             android:paddingRight="10dp"
             android:textStyle="bold"
             android:textColor="@color/main"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
     </LinearLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <com.xinshuwu.widget.easyrecyclerview.EasyNoRefreshRecyclerView
+        android:id="@+id/eas_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="16dp" />
 
 </LinearLayout>
