--- a/xinshuwu/app/src/main/res/layout/activity_base.xml
+++ b/xinshuwu/app/src/main/res/layout/activity_base.xml
@@ -23,8 +23,8 @@
 
             <ImageView
                 android:id="@+id/close_image"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@mipmap/arrow_icon"
                 android:scaleType="fitXY" />
         </LinearLayout>
@@ -35,6 +35,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:textColor="@color/ash2"
             android:textSize="17sp" />
 
         <LinearLayout
@@ -47,9 +48,10 @@
 
     </LinearLayout>
 
-    <TextView
+    <View
         android:layout_width="match_parent"
-        android:layout_height="1px" />
+        android:layout_height="1px"
+        android:background="@color/grey_line" />
 
     <FrameLayout
         android:id="@+id/content_view"
