--- a/xinshuwu/app/src/main/res/layout/novel_detail_activity.xml
+++ b/xinshuwu/app/src/main/res/layout/novel_detail_activity.xml
@@ -11,8 +11,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="4dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,8 +44,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:textSize="12sp"
-                        android:textColor="@color/ash6" />
+                        android:textColor="@color/ash6"
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/book_type_number_word"
@@ -59,11 +59,12 @@
                         android:id="@+id/book_catalog"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp" />
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/ash6"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
             </LinearLayout>
-
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
